[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/character/duck_dash_shadow.gd" type="Script" id=1]
[ext_resource path="res://resources/material/dash_shadermaterial.tres" type="Material" id=3]

[node name="DashShadow" type="Sprite"]
material = ExtResource( 3 )
z_index = -1
script = ExtResource( 1 )

[node name="AlphaTween" type="Tween" parent="."]

[connection signal="tween_completed" from="AlphaTween" to="." method="_on_AlphaTween_tween_completed"]
